[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/Dialogue Icon/JankTopKaiDialogueIcon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Codes/TextEffects/CustomColorEffect.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sprites/Misc/DialogueBox.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/Click.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Codes/MidDialogue.gd" type="Script" id=6]
[ext_resource path="res://Assets/SFX/Text VC.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sprites/MobileButtons/Normal/MobileButtonQ.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/MobileButtons/Pressed/MobileButtonQPressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/SFX/MenuSelecting.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=39]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=40]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=41]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RichTextEffect" id=38]
script = ExtResource( 2 )

[sub_resource type="DynamicFont" id=48]
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxEmpty" id=46]

[sub_resource type="StyleBoxEmpty" id=47]

[node name="MidDialogue" type="CanvasLayer"]
layer = 2
script = ExtResource( 6 )

[node name="DialogueBox" type="Sprite" parent="."]
position = Vector2( 256, 248 )
texture = ExtResource( 4 )
hframes = 3
frame = 2

[node name="Name" type="Label" parent="DialogueBox"]
margin_left = -240.0
margin_top = -56.0
margin_right = 272.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 39 )
align = 1

[node name="Skip" type="Label" parent="DialogueBox"]
margin_left = 104.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.529412, 0.529412, 0.529412, 1 )
custom_fonts/font = SubResource( 40 )
text = "Press [Q] to skip"
align = 2

[node name="Text" type="RichTextLabel" parent="DialogueBox"]
margin_left = -224.0
margin_top = -28.0
margin_right = 128.0
margin_bottom = 68.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
scroll_active = false
custom_effects = [ SubResource( 38 ) ]

[node name="Timer" type="Timer" parent="DialogueBox"]
wait_time = 0.5

[node name="Left" type="Position2D" parent="DialogueBox"]
position = Vector2( -160, -40 )

[node name="Right" type="Position2D" parent="DialogueBox"]
position = Vector2( 152, -40 )

[node name="Sprite" type="Sprite" parent="DialogueBox"]
position = Vector2( 170, -42 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
offset = Vector2( -6, -64 )
hframes = 10
frame = 2

[node name="Q" type="TouchScreenButton" parent="DialogueBox"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 0, -88 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
passby_press = true
action = "ui_skip"

[node name="Choices" type="VBoxContainer" parent="DialogueBox"]
visible = false
margin_left = -216.0
margin_top = -32.0
margin_right = 216.0
margin_bottom = 32.0
alignment = 1

[node name="Choice1" type="Button" parent="DialogueBox/Choices"]
margin_right = 432.0
margin_bottom = 13.0
rect_min_size = Vector2( 64, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 48 )
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 47 )
action_mode = 0
text = "Choice 1"
align = 0

[node name="Choice2" type="Button" parent="DialogueBox/Choices"]
margin_top = 17.0
margin_right = 432.0
margin_bottom = 30.0
rect_min_size = Vector2( 64, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 48 )
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 47 )
action_mode = 0
text = "Choice 2"
align = 0

[node name="Choice3" type="Button" parent="DialogueBox/Choices"]
margin_top = 34.0
margin_right = 432.0
margin_bottom = 47.0
rect_min_size = Vector2( 64, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 48 )
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 47 )
action_mode = 0
text = "Choice 3"
align = 0

[node name="Choice4" type="Button" parent="DialogueBox/Choices"]
margin_top = 51.0
margin_right = 432.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 0.74902, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.435294, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 48 )
custom_styles/hover = SubResource( 43 )
custom_styles/pressed = SubResource( 44 )
custom_styles/focus = SubResource( 45 )
custom_styles/disabled = SubResource( 46 )
custom_styles/normal = SubResource( 47 )
action_mode = 0
text = "Choice 4"
align = 0

[node name="TextVC" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
pitch_scale = 1.5
bus = "SFX"

[node name="Selecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
bus = "SFX"

[node name="Selected" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "SFX"

[connection signal="timeout" from="DialogueBox/Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_entered" from="DialogueBox/Choices/Choice1" to="." method="_on_Stuff_focus_entered"]
[connection signal="pressed" from="DialogueBox/Choices/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="focus_entered" from="DialogueBox/Choices/Choice2" to="." method="_on_Stuff_focus_entered"]
[connection signal="pressed" from="DialogueBox/Choices/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="focus_entered" from="DialogueBox/Choices/Choice3" to="." method="_on_Stuff_focus_entered"]
[connection signal="pressed" from="DialogueBox/Choices/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="focus_entered" from="DialogueBox/Choices/Choice4" to="." method="_on_Stuff_focus_entered"]
[connection signal="pressed" from="DialogueBox/Choices/Choice4" to="." method="_on_Choice4_pressed"]
